MDEV-6091 mysqldump goes in a loop and segfaults if --dump-slave is specified and it cannot connect to the server

do_start_slave_sql() is called from maybe_exit().
We should not recurse when maybe_exit() is called for an error during do_start_slave_sql().
Also remove a meaningless (but safe) "goto err".